--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ code {
   border: 2px solid pink;
 }
 
+.person-info--selected {
+  outline: solid 2px #ccc;
+}
+
 .firstNameLastName {
   padding: 0 0 10px;
   color: #333333;
