--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ code {
   flex-direction: column;
 }
 
+.person-info {
+  border: 2px solid transparent;
+}
+
 .person-info:hover {
   padding: 30px;
   border: 2px solid pink;
@@ -59,6 +63,24 @@ code {
   color: #666666;
   font-size: 14px;
   line-height: 1.8em;
+}
+
+.button {
+  width: 200px;
+  margin: 0 auto;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border: none;
+  box-shadow: 0px 1px 2px 0px rgb(0 0 0 / 15%);
+  cursor: pointer;
+  border: 2px solid transparent;
+}
+
+.button:hover {
+  border: 2px solid pink;
 }
 
 .error {
